tests-e2e/tests/snapshots/cli__config_null_source_arguments_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:61
  •
  │
  • invalid type: null, expected a sequence
  │
  │   {"sources":{"kind":"command","program":"custom","arguments":null}}
  │                                                               ╰───
  •
