tests-e2e/tests/snapshots/cli__config_requires_value.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [missing_flag_value] · command line:1:10
  •
  │
  • a value is required for '--config <JSON>' but none was supplied
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --config
  │            ╰───────
  •
