tests-e2e/tests/snapshots/cli__config_trailing_json_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:4
  •
  │
  • trailing characters
  │
  │   {} false
  │      ╰
  •
