tests-e2e/tests/snapshots/cli__config_unicode_syntax_error_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:2:28
  •
  │
  • expected value
  │
  │       "diagnostics": {"onSave": λ}
  │                                 ╰
  •
