tests-e2e/tests/snapshots/cli__config_unknown_diagnostic_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:17
  •
  │
  • unknown field `onOpened`, expected one of `onOpen`, `onSave`, `onChange`
  │
  │   {"diagnostics":{"onOpened":false}}
  │                   ╰─────────
  •
