tests-e2e/tests/snapshots/cli__config_unknown_setting_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:2
  •
  │
  • unknown field `unknown`, expected `sources` or `diagnostics`
  │
  │   {"unknown":true}
  │    ╰────────
  •
